Fix: align covertext with Our mission and About Us sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,8 +93,8 @@ h2 {
 
     background-color: rgba(255, 215, 0, 0.7);
 
-    bottom: 50px;
-    left: 50px;
+    bottom: 100px;
+    left: 100px;
 
     position: absolute;
 }
